test/invalid-syntax/fc66494_wrong_int/wrong_int.mag
-- Author: 66494, Tiago Silva

const x : Int = -012908

fun main (_) : Unit -> Unit =
    print(x)